opam-version: "2.0"
name: "eva_asm"
version: "0.1"
synopsis: "An assembler for the Eva assembly language"
description: """"""
maintainer: "arthur correnson <arthur.correnson@univ-tlse3.fr>"
authors: "arthur correnson <arthur.correnson@univ-tlse3.fr>"
license: "MIT"
homepage: "https://github.com/eva-vm/eva_asm"
bug-reports: ""
dev-repo: "git+https://github.com/eva-vm/eva_asm.git"
depends: [ "ocaml" "ocamlfind" "core" ]
build: ["dune" "build" "-p" name "-j" jobs]